@@ -98,3 +98,4 @@ commons-lang3.version=3.6
 scala-xml.version=1.0.5
 glassfish.el.version=3.0.1-b08
 roaring-bitmap-shaded.version=0.7.14
+dependency-check-ant.version=5.2.4
